// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LimitPriceError > renders the limit price error correctly when there is a calculation error 1`] = `
<div
  class="fade-presence fade-presence-translate fade-presence-delayed"
  style="--fade-presence-duration: 125ms; --fade-presence-delay: 125ms;"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] mt-[4px] p-[12px] w-[100%] border-surface3 border-[1px] rounded-[16px]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-critical-secondary rounded-[12px]"
    >
      <svg
        fill="none"
        stroke="currentColor"
        stroke-width="1"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0zM12 9v4M12 17h.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink gap-[8px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        Market price not available
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        We are unable to calculate the current market price. To avoid submitting an order below market price, please check your network connection and try again.
      </span>
    </div>
  </div>
</div>
`;

exports[`LimitPriceError > renders the limit price error correctly, inverted %p change %p false -10 1`] = `
<div
  class="fade-presence fade-presence-translate fade-presence-delayed"
  style="--fade-presence-duration: 125ms; --fade-presence-delay: 125ms;"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] mt-[4px] p-[12px] w-[100%] border-surface3 border-[1px] rounded-[16px]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-critical-secondary rounded-[12px]"
    >
      <svg
        fill="none"
        stroke="currentColor"
        stroke-width="1"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0zM12 9v4M12 17h.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink gap-[8px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        Selling DAI below market price
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Your limit price is 10% lower than market. Adjust your limit price to proceed.
      </span>
    </div>
  </div>
</div>
`;

exports[`LimitPriceError > renders the limit price error correctly, inverted %p change %p false 10 1`] = `
<div
  class="fade-presence fade-presence-translate fade-presence-delayed"
  style="--fade-presence-duration: 125ms; --fade-presence-delay: 125ms;"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] mt-[4px] p-[12px] w-[100%] border-surface3 border-[1px] rounded-[16px]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-critical-secondary rounded-[12px]"
    >
      <svg
        fill="none"
        stroke="currentColor"
        stroke-width="1"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0zM12 9v4M12 17h.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink gap-[8px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        Selling DAI below market price
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Your limit price is 10% lower than market. Adjust your limit price to proceed.
      </span>
    </div>
  </div>
</div>
`;

exports[`LimitPriceError > renders the limit price error correctly, inverted %p change %p true -10 1`] = `
<div
  class="fade-presence fade-presence-translate fade-presence-delayed"
  style="--fade-presence-duration: 125ms; --fade-presence-delay: 125ms;"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] mt-[4px] p-[12px] w-[100%] border-surface3 border-[1px] rounded-[16px]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-critical-secondary rounded-[12px]"
    >
      <svg
        fill="none"
        stroke="currentColor"
        stroke-width="1"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0zM12 9v4M12 17h.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink gap-[8px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        Buying USDC above market price
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Your limit price is 10% higher than market. Adjust your limit price to proceed.
      </span>
    </div>
  </div>
</div>
`;

exports[`LimitPriceError > renders the limit price error correctly, inverted %p change %p true 10 1`] = `
<div
  class="fade-presence fade-presence-translate fade-presence-delayed"
  style="--fade-presence-duration: 125ms; --fade-presence-delay: 125ms;"
>
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[12px] mt-[4px] p-[12px] w-[100%] border-surface3 border-[1px] rounded-[16px]"
  >
    <div
      class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] items-center justify-center shrink-[0] w-[40px] h-[40px] bg-critical-secondary rounded-[12px]"
    >
      <svg
        fill="none"
        stroke="currentColor"
        stroke-width="1"
        style="width: 20px; height: 20px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0zM12 9v4M12 17h.01"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <div
      class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink gap-[8px]"
    >
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [line-height:20px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        Buying USDC above market price
      </span>
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
      >
        Your limit price is 10% higher than market. Adjust your limit price to proceed.
      </span>
    </div>
  </div>
</div>
`;
